InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__AccumulationValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccumulationValue__c</fullName>
    <description>Accumulation Value</description>
    <label>Accumulation Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>