InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__ApplicationSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ApplicationSubmitDate__c</fullName>
    <description>Application Submit Date</description>
    <label>Application Submit Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>