InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__AutomaticRebalancing__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AutomaticRebalancing__c</fullName>
    <description>Automatic Rebalancing</description>
    <label>Automatic Rebalancing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>