InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__BillingMethod__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__BillingMethod__c</fullName>
    <description>Billing Method</description>
    <label>Billing Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>