InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__ContractDeathBenefit__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContractDeathBenefit__c</fullName>
    <description>Contract Death Benefit</description>
    <label>Contract Death Benefit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>