InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__ContractLivingBenefit__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContractLivingBenefit__c</fullName>
    <description>Contract Living Benefit</description>
    <label>Contract Living Benefit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>