InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__DeathBenefit__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DeathBenefit__c</fullName>
    <description>Death Benefit</description>
    <label>Death Benefit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>