InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__DRError__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DRError__c</fullName>
    <description>Full error when processing.</description>
    <label>DR Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>