InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__FaceAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FaceAmount__c</fullName>
    <description>Face Amount</description>
    <label>Face Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>