InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__GuaranteedDeathBenefit__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GuaranteedDeathBenefit__c</fullName>
    <description>Guaranteed Death Benefit</description>
    <label>Guaranteed Death Benefit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>