InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__Insurer__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Insurer__c</fullName>
    <description>Insurer</description>
    <label>Insurer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>