InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__PolicyholderAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyholderAccountId__c</fullName>
    <description>Policy Holder Account Id</description>
    <label>Policy Holder Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>