InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__PolicyJurisdiction__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyJurisdiction__c</fullName>
    <description>Policy Jurisdiction</description>
    <label>Policy Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>