InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyNumber__c</fullName>
    <description>Policy Number</description>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>