InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__PolicyStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyStatus__c</fullName>
    <description>Policy Status</description>
    <label>Policy Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>