InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__PolicyType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PolicyType__c</fullName>
    <description>Policy Type</description>
    <label>Policy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>