InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__QualifiedType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__QualifiedType__c</fullName>
    <description>Qualified Type</description>
    <label>Qualified Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>