InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__RecordType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RecordType__c</fullName>
    <description>Record Type</description>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>