InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__RelatedPartyCommissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelatedPartyCommissionPercentage__c</fullName>
    <description>Related Party Commission Percentage</description>
    <label>Related Party Commission Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>