InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/fields/vlocity_ins__RelatedPartyId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelatedPartyId__c</fullName>
    <description>Related Party Id</description>
    <label>Related Party Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>