InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/listViews/vlocity_ins__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__PolicyNumber__c</columns>
    <columns>vlocity_ins__PolicyType__c</columns>
    <columns>vlocity_ins__DRBundleName__c</columns>
    <columns>vlocity_ins__DRStatus__c</columns>
    <columns>vlocity_ins__DRProgressData__c</columns>
    <columns>vlocity_ins__DRError__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>