InsuranceOrg/force-app/main/default/objects/vlocity_ins__Interface_InsurancePolicy__c/listViews/vlocity_ins__All1.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>